// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscardFormButton> applies className correctly 1`] = `
<Fragment>
  <Button
    className="className"
    dataTest="dhis2-uicore-button"
    onClick={[Function]}
    small={false}
    type="button"
  >
    Discard
  </Button>
</Fragment>
`;

exports[`<DiscardFormButton> renders correctly 1`] = `
<Fragment>
  <Button
    className=""
    dataTest="dhis2-uicore-button"
    onClick={[Function]}
    small={false}
    type="button"
  >
    Discard
  </Button>
</Fragment>
`;

exports[`<DiscardFormButton> renders small correctly 1`] = `
<Fragment>
  <Button
    className=""
    dataTest="dhis2-uicore-button"
    onClick={[Function]}
    small={true}
    type="button"
  >
    Discard
  </Button>
</Fragment>
`;
